added babel modules for es2015 compatibity , added webpack-dev-server for see what you are coding, changed instructions on readme file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<div id="container"></div>
-	<script type="text/javascript" src="build/learning-react.js"></script>
+	<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
