--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<div id="container"></div>
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="static/bundle.js"></script>
 </body>
 </html>
